# auto-sre

./: .gitattributes  .gitignore  Blog.md  Dockerfile  README.md  agent_loop.py  app.py  cli.py  generate_dataset.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  sft_dataset.jsonl  shared_formatter.py  trainer.py
auto_sre_env/: __init__.py  chaos_engine.py  dependency_graph.py  environment.py  grader.py  judge.py  log_generator.py  models.py  runbook.py  server.py  sub_agent_router.py  tasks.py
frontend/: app.js  index.html  styles.css
server/: app.py
